--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/souravkl11/raganork-md.git"
+    "url": "git+https://github.com/A-S-W-I-N-S-P-A-R-K-Y/raganork-md.git"
   },
   "overrides": {
     "raganork-bot": {
@@ -22,7 +22,7 @@
   "author": "Sourav",
   "developer": "@souravkl11",
   "license": "GPL-3.0-or-later",
-  "homepage": "https://github.com/souravkl11/raganork#readme",
+  "homepage": "https://github.com/A-S-W-I-N-S-P-A-R-K-Y/raganork-md#readme",
   "dependencies": {
     "@adiwajshing/baileys": "git+https://github.com/souravkl11/Baileys.git",
     "@adiwajshing/keyed-db": "0.2.4",
@@ -34,7 +34,6 @@
     "google-tts-api": "2.0.2",
     "image-to-pdf": "2.0.0",
     "imgur": "^2.2.0",
-    "link-preview-js": "2.1.15",
     "mongodb": "^4.3.1",
     "node-cron": "3.0.1",
     "node-webpmux": "^3.1.0",
